--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <label for="slider" id="sliderText">0%</label>
             <input type="range" min="0" max="100" value="0" class="slider" id="slider" name="slider" />
             <p>Input Color</p>
+            <div id="input-color" class="box"></div>
+            <p>Altered Color</p>
             <div id="altered-color" class="box"></div>
         </div>
 
