added altered color to match with slider

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <div class="container">
             <h1 class="title">Color Lighten/Darken</h1>
             <label for="hex">Color (Hex)</label>
-            <input type="text" name="hex" id="hex-input" placeholder="#000000" />
+            <input type="text" name="hex" id="hex-input" placeholder="#000000" value="#c6d5ac" />
 
-            <label for="slider" id="sliderText">0%</label>
+            <label for="slider" id="slider-text">0%</label>
             <input type="range" min="0" max="100" value="0" class="slider" id="slider" name="slider" />
             <p>Input Color</p>
             <div id="input-color" class="box"></div>
-            <p>Altered Color</p>
+            <p id="altered-color-text">Altered Color</p>
             <div id="altered-color" class="box"></div>
         </div>
 
