added toggle button with styles and functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
             <label for="hex">Color (Hex)</label>
             <input type="text" name="hex" id="hex-input" placeholder="#000000" value="#c6d5ac" />
 
+            <div class="toggle">
+                <p class="toggle-text" id="lighten-text">Lighten</p>
+                <div id="toggle-btn" class="toggle-btn">
+                    <div class="inner-circle"></div>
+                </div>
+                <p class="toggle-text" id="darken-text">Darken</p>
+            </div>
+
             <label for="slider" id="slider-text">0%</label>
             <input type="range" min="0" max="100" value="0" class="slider" id="slider" name="slider" />
             <p>Input Color</p>
